Add readme doc for project

--- a/doc/前端页面整理.md
+++ b/doc/前端页面整理.md
@@ -1,10 +1,213 @@
 # 前端页面整理与接口定义
 ------
-### 前端页面结构
+### 一、前端页面结构
 ```
 -ECG Cloud
     -doc        [项目文档]
     -lib        [外部依赖库]
     -pages      [html页面]
     -static     [静态文件，如JS/CSS/IMAGE]
+```
+***
+#### 1、外部依赖库[lib]说明
+```
+-lib
+    -bootstrap-3.3.5-dist           // Bootstrap 3.0框架
+    -bootstrap-datetimepicker       // 基于Bootstrap 3.0实现的日期时间选择器
+    -DataTables-1.10.8              // 基于jquery实现的表格控件
+    -jquery-multiselect             // 基于jquery实现的two sides多选框
+    -jquery-ui-1.11.4               // 基于jquery实现的ui框架
+    -zTree_v3                       // zTree树形插件
+    html5shiv.min.js                // IE8下支持HTML5组件与CSS Media
+    jquery-2.0.3.min.js             // jQuery 2.0核心库
+    normalize.css                   // CSS常用元素规范化
+    respond.min.js                  // IE8下支持HTML5组件与CSS Media
+```
+    项目基于Bootstrap3.0框架与jquery2.0核心库实现，引用的外部插件主要基于该两个库实现。
+***
+#### 2、html页面说明
+```
+-pages
+    index.html                      // 项目临时入口
+    -doctor                         // 医生模块
+    -hospital                       // 基层医院模块
+    -technician                     // 技师模块
+```
+    目前根据检查单的流程，划分为“医生”、“技师”、“基层医院”三个模块，以index为划分各个模块的入口。三个模块分别对应不同的登录页面与功能操作。
+##### 2.1 医生模块[doctor]说明
+```
+-doctor
+    /* 已完成 */
+    login.html                      // 医生登录
+    uncheckTaskManage.html          // 待审核任务列表
+    uncheckTaskDetails.html         // 初审任务详情
+    recheckTaskDetails.html         // 重审任务详情
+    initConsultManage.html          // 发起会诊列表
+    initConsultDetails.html         // 发起会诊详情
+    joinConsultManage.html          // 参与会诊列表
+    joinConsultDetails.html         // 参与会诊详情
+    addConsult.html                 // 添加会诊
+    editConsult.html                // 编辑会诊
+    /* 计划完成 */
+    dashboard.html                  // 工作面板
+    techManage.html                 // 技师列表
+    techDetails.html                // 技师详情
+    messageManage.html              // 消息列表
+    messageDetails.html             // 消息详情
+    center.html                     // 个人中心
+```
+    目前医生模块中主要围绕检查单与会诊两个实体实现页面功能，计划完成中的功能主要涉及消息推送、个人信息管理、技师团队管理等。
+##### 2.2 基层医院模块[hospital]说明
+```
+-hospital
+    /* 已完成 */
+    login.html                      // 基层医院登录
+    uploadFile.html                 // 新建检查单
+    checklistManage.html            // 检查单管理
+    unfinishedChecklist.html        // 未完成检查单列表
+    finishedChecklist.html          // 已完成检查单列表
+    patientManage.html              // 病人列表
+    AddPatient.html                 // 添加病人
+    /* 计划完成 */
+    dashboard.html                  // 工作面板
+    messageManage.html              // 消息列表
+    messageDetails.html             // 消息详情
+    staffManage.html                // 人员管理
+    staffDetails.html               // 人员详情
+    addStaff.html                   // 添加人员
+    patientDetails.html             // 病人详情
+    editPatient.html                // 编辑病人信息
+```
+    目前基层医院模块主要围绕检查单与病人两个实体实现页面功能，计划完成中的功能主要涉及消息推送、人员管理、完善病人管理功能。
+##### 2.3 技师模块[technician]说明
+```
+-technician
+    /* 已完成 */
+    login.html                      // 技师登录
+    unoccupiedTaskManage.html       // 可接任务列表
+    occupiedTaskManage.html         // 已接任务列表
+    analysisTaskDetails.html        // 分析任务页面
+    reanalysisTaskManage.html       // 重分析任务列表
+    reanalysisTaskDetails.html      // 重分析任务详情
+    finishedTaskManage.html         // 已完成任务列表
+    finishedTaskDetails.html        // 已完成任务详情
+    /* 计划完成 */
+    dashboard.html                  // 工作面板
+    messageManage.html              // 消息列表
+    messageDetails.html             // 消息详情
+    center.html                     // 个人中心
+```
+    技师模块主要围绕检查单实现页面功能，计划完成中的功能主要涉及消息推送、个人中心等功能。
+***
+#### 3、static静态文件说明
+静态文件主要存储javascript[js], CSS样式文件[css], 图片文件[img].
+```
+-static
+    -css                            // CSS样式文件
+    -img                            // 图片文件
+    -js                             // javascript文件
+```
+##### 3.1 CSS样式文件[css]说明
+```
+-css
+    frame.css                       // 整体框架与通用样式
+    index.css                       // 临时入口样式
+    -doctor                         // 医生模块
+    -hospital                       // 基层医院模块
+    -technician                     // 技师模块
+```
+    目前css样式直接编写[text.html.css]文件进行定义，之后将改用SASS进行编写。
+##### 3.2 Javascript文件[js]说明
+```
+-js
+    -doctor                         // 医生模块
+    -hospital                       // 基层医院模块
+    -technician                     // 技师模块
+```
+    目前js代码没有处理详尽的依赖链，通过直接在对应页面引用相关的外部依赖库以及对应的js文件实现。之后将通过seajs或requireJS进行依赖处理。
+##### 3.3 图片文件[img]说明
+    目前img文件夹主要临时存储一些占位图以及临时图片进行页面测试。
+
+
+----------
+
+
+### 二、接口定义
+#### 1、通用响应结构
+```
+{
+    code:       Number,             // 返回码，如200为正常
+    message:    String,             // 状态说明
+    data:       Object              // 返回数据，具体字段参考对应的接口
+}
+```
+当`code`不等于200，即出现异常时，`message`返回错误信息。如：
+```
+{
+    code: 500,
+    message: '系统繁忙, 请稍后重试...',
+    data: null
+}
+```
+#### 2、服务接口
+##### 2.1 医生模块[doctor]
+###### 1. 登录
+ - description: 用于医生登录
+ - 条件: 无
+ - method: **POST**
+ - URL: **/_doctor/s/login**
+ - 参数:
+```
+{
+    username:   String,             // 用户名
+    password:   String,             // MD5值
+    verify:     String,             // 验证码
+    durable:    Bool                // Remember me
+}
+```
+ - 返回数据:
+```
+{
+    code:               Number,             // 返回码
+    message:            String,             // 状态说明, 如“登录成功”
+    data: {
+        uid:            Number,             // 用户id
+        token:          String              // token身份令牌
+    }
+}
+```
+ - 示例
+```
+{
+    code:       200,
+    message:    '登录成功',
+    data: {
+        uid:    0000001,
+        token:  'i4f6n7v4d7s9j7g5'
+    }
+}
+```
+ - 备注
+
+###### 2. 登出
+ - description: 账号登出
+ - 条件: 无
+ - method: **GET**
+ - URL: **/_doctor/s/logout**
+ - 参数: 无
+ - 返回数据:
+```
+{
+    code:       Number,             // 返回码
+    message:    String,             // 状态说明, 如“退出登录成功”
+    data:       null
+}
+```
+ - 示例:
+```
+{
+    code:       200,
+    message:    '退出登录成功',
+    data:       null
+}
 ```
